fix: 移除z-index以修复布局问题
移除`main.scss`中`z-index: -1`以避免布局问题，同时更新HTML文件中的资源路径以反映最新构建结果。

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -979,7 +979,6 @@ table {
       min-height: 189px;
       margin-top: -3px;
       position: relative;
-      z-index: -1;
       $base-height: 189;
       $breakpoints: (
         920: 0.9,
